Add actionBar icons in MainActivity : add, settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PlantProject</string>
+    <string name="menu_add">Add Plant</string>
+    <string name="menu_settings">Settings</string>
 </resources>
